improve sprite generation aspect ratio to prevent clipping

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -174,7 +174,7 @@
   }
 
   ul {
-    @apply my-6 ml-6 list-disc [&>li]:mt-2 pl-1.25;
+    @apply list-disc [&>li]:mt-2 pl-1.25;
   }
 }
 
